<resources>
    <string name="app_name">BookGate</string>
    
    <!-- Login & Registration -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_as_member">Login as Member</string>
    <string name="login_as_librarian">Login as Librarian</string>
    <string name="register_new_account">Don\'t have an account? Register here</string>
    <string name="register_account">Register New Account</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Login here</string>
    <string name="register_as_librarian">Register as Librarian</string>
    <string name="admin_key">Admin Key</string>
    
    <!-- Books -->
    <string name="book_title">Book Title</string>
    <string name="book_author">Author</string>
    <string name="book_description">Description</string>
    <string name="book_cover">Book Cover</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="book_pdf_file">Book PDF File</string>
    <string name="add_book">Add Book</string>
    <string name="add_new_book">Add New Book</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_selected">No file selected</string>
    <string name="description">Description</string>
    
    <!-- Download Keys -->
    <string name="download_pdf">Download PDF</string>
    <string name="enter_download_key">Enter Download Key</string>
    <string name="submit">Submit</string>
    <string name="manage_download_keys">Manage Download Keys</string>
    <string name="add_new_key">Add New Key</string>
    <string name="download_key">Download Key</string>
    <string name="add_key">Add Key</string>
    <string name="existing_keys">Existing Keys</string>
    <string name="delete_key">Delete Key</string>
    
    <!-- Admin Panel -->
    <string name="admin_panel">Admin Panel</string>
    <string name="logout">Logout</string>
    <string name="app_logo">App Logo</string>
</resources>